@@ -46,6 +46,9 @@ Bug Fixes
 
 * GITHUB#15702: Fix Potential NullPointException in BytesRefHash initialization#15702 (tyronecai)
 
+* GITHUB#15731: Fix tessellator failure when a hole is touching another hole in the middle of a segment. In this case
+  we might fail to detect it and choose a wrong bridge to eliminate the hole. (Ignacio Vera)
+
 Other
 ---------------------
 * GITHUB#15586: Document that scoring and ranking may change across major Lucene versions, and that applications requiring stable ranking should explicitly configure Similarity. (Parveen Saini)
